--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <!-- navigation -->
     <header>
-      <h1>RUN BUDDY</h1>
+      <h1>
+        <a href="/"> RUN BUDDY </a>
+      </h1>
       <nav>
         <!-- Unordered list element -->
         <ul>
@@ -54,6 +57,10 @@
     <!--footer-->
     <footer>
       <h2>❤️ Made with love by Run Buddy.</h2>
+      <div>
+        <a href="#">Read Our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+      </div>
     </footer>
   </body>
 </html>
